chore: lint, prettier, typecheck + CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,9 @@
 name: CI
 on: [push, pull_request]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: app
+    defaults: { run: { working-directory: app } }
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -15,4 +12,6 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'app/package-lock.json'
       - run: npm ci
+      - run: npm run typecheck
+      - run: npm run lint
       - run: npm run build
