--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,3 @@
-# .github/workflows/pages.yml
 name: Deploy to GitHub Pages
 on:
   push:
@@ -28,16 +27,16 @@ jobs:
           cache-dependency-path: app/package-lock.json
       - run: npm ci
       - run: GITHUB_PAGES=1 npm run build
-      - run: cp -v dist/index.html dist/404.html  # SPA fallback for BrowserRouter
+      - run: cp -v dist/index.html dist/404.html   # SPA fallback
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: app/dist   # path is from repo root; we point to app/dist
+          path: app/dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
-      name: github-pages
+      name: github-pages   # make sure this environment exists in Settings → Environments
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - id: deployment
