--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,23 @@
 name: CI
-on: [push, pull_request]
+on:
+  push:
+    branches: [main, feat/**]
+  pull_request:
+    branches: [main]
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults: { run: { working-directory: app } }
+    defaults:
+      run:
+        working-directory: app
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '22.12.0'
-          cache: 'npm'
-          cache-dependency-path: 'app/package-lock.json'
+          node-version: 22
+          cache: npm
+          cache-dependency-path: app/package-lock.json
       - run: npm ci
-      - run: npm run typecheck
       - run: npm run lint
       - run: npm run build
