--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           node-version: 22
           cache: npm
-      - run: npm install --no-fund --no-audit
+          cache-dependency-path: app/package-lock.json
+      - run: npm ci
       - run: npm run lint
       - run: npm run test -- --coverage
       - run: npm run build
