--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           node-version: 22
           cache: npm
-      - run: npm install --no-fund --no-audit
+          cache-dependency-path: app/package-lock.json
+      - run: npm ci
       - run: echo "VITE_DEMO=1" > .env.demo
       - run: npm run build
       - run: touch dist/.nojekyll
